@@ -1,7 +1,11 @@
 package net.davoleo.mettle.data;
 
 import com.google.common.base.Joiner;
+import com.google.gson.Gson;
+import com.google.gson.reflect.TypeToken;
+import com.google.gson.stream.JsonReader;
 import net.davoleo.mettle.Mettle;
+import net.davoleo.mettle.api.metal.ComponentType;
 import net.davoleo.mettle.init.ModRegistry;
 import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.resources.ResourceLocation;
@@ -9,13 +13,17 @@ import net.minecraft.server.packs.AbstractPackResources;
 import net.minecraft.server.packs.PackType;
 import net.minecraft.server.packs.ResourcePackFileNotFoundException;
 import net.minecraft.server.packs.metadata.MetadataSectionSerializer;
+import org.apache.commons.lang3.tuple.Pair;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.*;
+import java.lang.reflect.Type;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
+import java.util.Collection;
+import java.util.Map;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -25,6 +33,9 @@ public class VirtualPackResources extends AbstractPackResources {
 
     private Path source;
 
+    private final Map<String, ComponentType> resourceConditions;
+    private final Map<String, String> compiledToTemplates;
+
     public VirtualPackResources() {
         super(new File("AWOWA"));
         this.source = Mettle.platformUtils.getResourcesPath().resolve("virtual");
@@ -32,15 +43,46 @@ public class VirtualPackResources extends AbstractPackResources {
             String newPath = source.toString().replace(Mettle.platformUtils.getModLoader().toString(), "common");
             this.source = Path.of(newPath);
         }
+
+        try (var files = Files.walk(source);
+             JsonReader conditionsReader = new JsonReader(new InputStreamReader(getRootResource("conditions.json")))
+        ) {
+
+            Type type = new TypeToken<Map<String, ComponentType>>(){}.getType();
+            resourceConditions = new Gson().fromJson(conditionsReader, type);
+
+            compiledToTemplates = files
+                    .map(source::relativize)
+                    .filter(path -> !path.toString().endsWith(".mcmeta") && !path.toString().endsWith("conditions.json"))
+                    .map(path -> Joiner.on("/").join(path))
+                    .flatMap(path -> {
+                        Stream.Builder<Pair<String, String>> resources = Stream.builder();
+                        ModRegistry.METALS.forEach((name, metal) -> {
+
+                            var component = resourceConditions.get(path);
+                            if (component != null && !metal.value().components().get(component)) {
+                                return;
+                            }
+
+
+
+                            //TODO : Generic Replace? replace more? more loops? when?
+                            String replaced = path
+                                    .replace("§metal§", name)
+                                    .replace(".template", "");
+
+                            resources.add(Pair.of(replaced, path));
+                        });
+                        return resources.build();
+                    })
+                    .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
+        }
+        catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
         System.out.println("VIRTUAL PACK source:" +  source);
-    }
 
-    private Optional<String> getMetalNameFromResource(String resourceName) {
-
-        // / or \ or _ or .
-        return Arrays.stream(resourceName.split("[\\\\/_.]"))
-                .filter(ModRegistry.METALS::has)
-                .findAny();
     }
 
     @NotNull
@@ -54,66 +96,37 @@ public class VirtualPackResources extends AbstractPackResources {
 
     @Override
     protected InputStream getResource(String resourcePath) throws IOException {
-        //System.out.println("getResource(" + resourcePath + ")");
 
-        var metalName = getMetalNameFromResource(resourcePath);
-        if (metalName.isEmpty())
+        String template = compiledToTemplates.get(resourcePath);
+
+        if (template == null)
             throw new ResourcePackFileNotFoundException(new File("METTLE_VIRTUAL_PACK"), resourcePath);
 
-        String templatePath = resourcePath
-                .replace(metalName.get(), "§metal§")
-                .replace(".json", ".template.json");
-        var templateString = Files.readString(source.resolve(templatePath));
-        templateString = templateString.replaceAll("§metal§", metalName.get());
-        return new ByteArrayInputStream(templateString.getBytes());
+        var templateContent = Files.readString(source.resolve(template));
+        for (var variable : TemplateVariables.getVariables(resourcePath, template)) {
+            templateContent = templateContent.replaceAll(variable.getA(), variable.getB());
+        }
+        return new ByteArrayInputStream(templateContent.getBytes());
     }
 
     @Override
     protected boolean hasResource(String resourcePath) {
         //System.out.println("hasResource(" + resourcePath + ")");
-
-        var metalName = getMetalNameFromResource(resourcePath);
-        if (metalName.isEmpty())
-            return false;
-
-        String templatePath = resourcePath
-                .replace(metalName.get(), "§metal§")
-                .replace(".json", ".template.json");
-        return Files.exists(source.resolve(templatePath));
+        return compiledToTemplates.containsKey(resourcePath);
     }
 
     @Override
     public Collection<ResourceLocation> getResources(PackType type, String namespace, String pathIn, int maxDepth, Predicate<String> filter) {
         //System.out.println("getResources(" + type + " " + namespace + " " + pathIn + ")");
-        Path packRoot = source.resolve(type.getDirectory()).resolve(namespace);
-        Path input = packRoot.getFileSystem().getPath(pathIn);
+        String prefix = type.getDirectory() + '/' + namespace + '/' + pathIn;
 
-        try (var files = Files.walk(packRoot)) {
-            return files
-                    .map(packRoot::relativize)
-                    .filter(path -> path.getNameCount() <= maxDepth && !path.toString().endsWith(".mcmeta") && path.startsWith(input))
-                    .filter(path -> filter.test(path.toString()))
-                    .map(path -> Joiner.on("/").join(path))
-                    .flatMap(path -> {
-                        Stream.Builder<String> resources = Stream.builder();
-                        ModRegistry.METALS.forEach((name, metal) -> {
-                            //TODO: dynamic blacklist check
-                            if (metal.mod().equals("minecraft"))
-                                return;
-
-                            String replaced = path
-                                    .replace("§metal§", name)
-                                    .replace(".template", "");
-                            resources.add(replaced);
-                        });
-                        return resources.build();
-                    })
-                    .map(path -> new ResourceLocation(namespace, path))
-                    .collect(Collectors.toList());
-        }
-        catch (IOException e) {
-            return Collections.emptyList();
-        }
+        return compiledToTemplates
+                .keySet()
+                .stream()
+                .filter(path -> path.startsWith(prefix) && (path.split("/").length - 2) <= maxDepth) //TODO: maxDepth condition : Verify
+                .filter(filter)
+                .map(string -> new ResourceLocation(Mettle.MODID, string.replace(prefix, "")))
+                .toList();
     }
 
     @Nullable
